# agentic-workflow

./: pyproject.toml  translated_id.md  translated_ja.md  translated_ko.md
modules/01_cot/: main.py
modules/01_cot/tools/: broadcast.py  translate.py
modules/02_selfreflection/: main.py  utils.py
modules/02_selfreflection/tools/: reflections.py  research_aggregator.py
modules/03_basic_agent/: main.py
modules/05_vector_query/: main.py
